codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_verbose_inventory.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs
    • Status: enabled
    • Visibility: visible by default
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: Docs (file:///docs)
    • Resource templates: Doc Template (file:///docs/{id})
